Scott comments on thesis.

--- a/src/aim3/aim3.tex
+++ b/src/aim3/aim3.tex
@@ -1,7 +1,7 @@
 \chapter{Musings on Latent Kinematics Space and Synthetic Biomechanics Data}
 
 In order to make autonomously measuring joint kinematics a clinically viable tool, the movements and motions being measured must be standardized.
-Similar efforts have been put into standardized post-operative outcome metrics like the Knee Society Score (KSS), Knee Injury and Osteoarthritis Outcome Score (KOOS), the Forgotten Joint Score, the Western Ontario and McMaster Universities Osteoarthritis Index (WOMAC), among others.
+Similar efforts have been put into standardized post-operative outcome metrics like the Knee Society Score (KSS)\cite{insallRationaleKneeSociety1989}, Knee Injury and Osteoarthritis Outcome Score (KOOS) \cite{roosKneeInjuryOsteoarthritis2003}, the Forgotten Joint Score \cite{behrendForgottenJointUltimate2012}, the Western Ontario and McMaster Universities Osteoarthritis Index (WOMAC) \cite{bellamy1988validation}, among others.
 Standardizing these metrics enables reliable and objective comparisons across different groups, implants, and surgical techniques.
 This same need for standardized metrics exists when quantifying joint kinematics for research and clinical purposes.
 Unfortunately, no such standardization exists for quantifying joint kinematics.
