--- a/src/aim4-shape-sensitivity/jtml-on-tsa.tex
+++ b/src/aim4-shape-sensitivity/jtml-on-tsa.tex
@@ -19,7 +19,7 @@ The efficacy of the algorithms will be assessed by comparing the root-mean-squar
 
 \subsection{Results}
 The root-mean-square errors for the humeral implant were roughly 9mm for in-plane translation and 150mm for out of plane translation.
-There are roughly 15 times higher than the corresponding femoral and tibial RMS differences.
+These are roughly 15 times higher than the corresponding femoral and tibial RMS differences.
 Additionally, humeral rotation differences all significantly exceed clinically acceptable errors.
 The most difficult rotation was the internal/external rotation axis, with an RMS difference of nearly $65^{\circ}$.
 \begin{table}[h!]
