--- a/src/conclusion/conclusion.tex
+++ b/src/conclusion/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion}
 
-This dissertation addresses the technological advancements in measuring fully autonomous kinematics from single-plane fluoroscopic images.
+This dissertation addresses the technological advancements in measuring fully autonomous implant kinematics from single-plane fluoroscopic images.
 The significance of this method lies in its potential to enable clinicians and surgeons to incorporate precise, quantitative data into the standard care protocol for patients undergoing total joint replacement.
 This approach paves the way for data-driven treatment options, particularly beneficial for addressing the complications that arise from dynamic activities in daily living.
 
@@ -28,8 +28,8 @@ An increase in error for images within $3^{\circ}$ of a pure-lateral view was no
 
 The strong performance demonstrated by JTML highlights a path forward for fully autonomous and clinically practical kinematics measurements during activities of daily living.
 Furthermore, the inclusion of a wide range of imaging qualities and high performance across the entire range lower the barriers to entry for using this technology in a clinical setting.
-One does not need the newest and most powerful equipment in order to accurately perform these measurements.
-
+Since it's publication, two separate research groups have published articles demonstrating the reliability, repeatability, accuracy, and speed of JointTrack Machine Learning on their own datasets to benchmark performance for their group's use \cite{pourtabibSignificantlyBetterPrecision2024,brobergValidationMachineLearning2023}.
+This highlights the impact of the work, and demonstrates the desire for this technology in different research groups.
 
 \subsection{Correcting Symmetric Pose Ambiguities in Kinematics Measurement from Single-Plane Fluoroscopy}
 A significant challenge in single-plane kinematics measurement is the existence of distinct 3D orientations that produce indistinguishable 2D projections.
