--- a/src/2-aims/aim2.tex
+++ b/src/2-aims/aim2.tex
@@ -1,18 +1,18 @@
 While establishing a pipeline for the fully autonomous measurements of TKA kinematics, we encountered many of the different limitations present in using single-plane fluoroscopy. Fundamentally, this is a problem that exists inherently in the system, as you have a severely underconstrained problem, leading us to the inverse problem of computer vision (\cref{def:inverse-problem}).
 
 \begin{mdframed}
-    \begin{definition}[Inverse Problem]
-        The inverse problem in computer vision is the process of calculating the causal factors (kinematics) the produced a set of observations (fluoroscopic images).
-        \label{def:inverse-problem}
-    \end{definition}
+	\begin{definition}[Inverse Problem]
+		The inverse problem in computer vision is the process of calculating the causal factors (kinematics) that produced a set of observations (fluoroscopic images).
+		\label{def:inverse-problem}
+	\end{definition}
 \end{mdframed}
 
 One of the more pernicious limitations in single-plane fluoroscopy is an issue that we've dubbed the ``symmetry trap'', which causes multiple global minima when using a strictly contour-based objective function. The major contributor to these issues is symmetric tibial implants, which are mediolaterally symmetric (i.e. no different between right and left implants).
 
 \begin{mdframed}
-    \begin{definition}[Symmetry Trap]
-        A symmetry trap occurs when a symmetric object has a projective geometry with more than one unique pose that can produce it. The simplest case is a sphere, where all poses produce the same circular projective geometry.
-    \end{definition}
+	\begin{definition}[Symmetry Trap]
+		A symmetry trap occurs when a symmetric object has a projective geometry with more than one unique pose that can produce it. The simplest case is a sphere, where all poses produce the same circular projective geometry.
+	\end{definition}
 \end{mdframed}
 
 This aim focuses on establishing a post-processing pipeline that can be used to address symmetry traps fully autonomously, solving an issue facing researchers studying single-plane kinematics for nearly 30 years! We also propose imaging recommendations to reduce the occurrence of symmetry traps in clinical data.
