JLA/KC edits for full doc

--- a/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
@@ -219,8 +219,8 @@ In the equation, $\mathbf{p}$ denotes a point in 3D space, and $\mathbf{x}$ sign
 
 \paragraph*{Perspective projection}
 The most prevalent 3D-2D projection is the perspective projection, which incorporates depth perception.
-This projection involves scaling each point by its $z$ position relative to the camera (Equation \ref{eq:perspective-proj}).
-The utilization of homogeneous coordinates is necessary for this operation (Equation \ref{eq:perspective-matrix}).
+This projection involves scaling each point by its $z$ position relative to the camera (\cref{eq:perspective-proj}).
+The utilization of homogeneous coordinates is necessary for this operation (\cref{eq:perspective-matrix}).
 
 \begin{equation}
     \bar{\mathbf{x}} = \mathcal{P}_z(\mathbf{p}) = \begin{bmatrix}
