--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -32,7 +32,7 @@ These capabilities might remove the need for human supervision from TKA model-im
 \label{sec:model-image-registration}
 \input{src/1-Intro/1-3_model-image-registration/1-3_model-image-registration.tex}
 
-\section{Automating Measurements of Kinematics from Fluoroscopic Images}
+\section{The Proposed Method of Automating Measurements of Kinematics from Fluoroscopic Images}
 \label{sec:autonomous-kinematics}
 \input{src/1-Intro/1-4_autonomous-kinematics-measurements/1-4_autonomous-kinematics-measurements.tex}
 %%% Local Variables:
