--- a/src/aim4-shape-sensitivity/aim4.tex
+++ b/src/aim4-shape-sensitivity/aim4.tex
@@ -2,7 +2,7 @@
 
 Another common arthroplasty procedure is total shoulder arthroplasty (TSA), which involves the removal and replacement of the distal end of the glenoid/scapula and the proximal end of the humeral head.
 Researchers, implant manufacturers, and surgeons, driven by similar motivations for understanding post-operative TKA kinematics, show equal interest in examining post-operative TSA kinematics.
-Despite differing from TKA outcomes, a significant portion of TSA patients report dissatisfaction, predominantly attributing it to mechanical limitations or instability.
+Despite the differences between rTSA and TKA outcomes, a significant portion of TSA patients report dissatisfaction, predominantly attributing it to mechanical limitations or instability.
 
 For the past twenty years, researchers have explored both anatomical and reverse total shoulder arthroplasty (rTSA) kinematics \cite{kijimaVivo3dimensionalAnalysis2015,matsukiVivo3DAnalysis2014,matsukiDynamicVivoGlenohumeral2012,sugiComparingVivoThreedimensional2021,burtonFullyAutomaticTracking2023}, attempting to draw connections between different implants and surgical techniques to postoperative shoulder dynamics and range of motion.
 For the same reasons that a reliable, fast, clinically practical, and fully-autonomous kinematics measurement platform would be desirable for clinicians operating on post-operative total knee arthroplasty (\cref{sec:jtml}), it would also be desirable for clinicians working on total shoulder arthroplasty.
