--- a/src/aim4-shape-sensitivity/new-metrics.tex
+++ b/src/aim4-shape-sensitivity/new-metrics.tex
@@ -218,7 +218,7 @@ Despite algorithmically identifying salient image features and minimizing the di
 This section delved into the exploration of applying JointTrack Machine Learning to reverse Total Shoulder Arthroplasty implants.
 Although the applications did not yield a successful solution for rTSA model-image registration, they contributed to expanding the body of knowledge in the field.
 
-First, all algorithms were rigorously tested on TKA implant registration to ensure no adverse impact on the established performance of JTML.
+First, all algorithms were tested on TKA implant registration to and results were visually inspected ensure no adverse impact on the established performance of JTML.
 Given the strengths listed for each algorithm, they might offer stronger and more robust performance than the traditional Hamming distance for TKA implants.
 This hypothesis warrants further testing and evaluation, suggesting that the described additions could significantly improve JTML's convergence speed and overall accuracy.
 
