--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -2228,6 +2228,13 @@
   file = {/home/ajj/references/docs/Costa et al-2021_A two-phase heuristic coupled DIRECT method for bound constrained global/Costa et al. - 2021 - A two-phase heuristic coupled DIRECT method for bo.pdf}
 }
 
+@article{costelloOverallKneeJoint,
+  title = {Overall {{Knee Joint Loading Exposure And Clinical Progression Of Knee Osteoarthritis}}},
+  author = {Costello, Kerry Elizabeth},
+  langid = {english},
+  file = {/home/ajensen123@ad.ufl.edu/references/zotero/storage/4ZR4GB84/Costello - Overall Knee Joint Loading Exposure And Clinical P.pdf}
+}
+
 @article{coudertReproducibleResearchComputational2017,
   title = {Reproducible {{Research}} in {{Computational Chemistry}} of {{Materials}}},
   author = {Coudert, Fran{\c c}ois-Xavier},
