Some changes for final clearance compliance

--- a/src/1-Intro/1-2_machine-learning/nn-telos.tex
+++ b/src/1-Intro/1-2_machine-learning/nn-telos.tex
@@ -9,7 +9,7 @@ Thus, neural networks represent an important advancement for the field of image 
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width = 0.75\linewidth]{figures/raster/visual-nn.png}
+  \includegraphics[width = 0.75\linewidth]{~/figures/raster/visual-nn.png}
   \caption{An example of a neural network mimicking the human brain.}
   \label{fig:nn-purpose-zebra}
 \end{figure}
