--- a/src/aim4-shape-sensitivity/new-metrics.tex
+++ b/src/aim4-shape-sensitivity/new-metrics.tex
@@ -30,7 +30,7 @@ However, surface DICE encounters a similar limitation as the Hamming distance, b
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.9\textwidth]{~/figures/raster/NSD.png}
-  \caption{A graphical representation of the Normalized Surface Distance from \cite{reinkeUnderstandingMetricrelatedPitfalls2023,reinkeCommonLimitationsImage2023}.}
+  \caption[A graphical representation of the Normalized Surface Distance]{A graphical representation of the Normalized Surface Distance from \cite{reinkeUnderstandingMetricrelatedPitfalls2023,reinkeCommonLimitationsImage2023}.}
   \label{fig:surfDICE}
 \end{figure}
 
@@ -41,7 +41,7 @@ A significant drawback of this method lies in its requirement to spawn a sub-ker
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.9\textwidth]{~/figures/raster/MASD.png}
-  \caption{A graphical representation of the Mean Average Surface Distance from \cite{reinkeCommonLimitationsImage2023,reinkeUnderstandingMetricrelatedPitfalls2023}.}
+  \caption[A graphical representation of the Mean Average Surface Distance]{A graphical representation of the Mean Average Surface Distance from \cite{reinkeCommonLimitationsImage2023,reinkeUnderstandingMetricrelatedPitfalls2023}.}
   \label{fig:MASD}
 \end{figure}
 
@@ -52,7 +52,7 @@ Similar to the Mean Average Surface Distance, this metric also necessitates sub-
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.9\textwidth]{~/figures/raster/ASSD.png}
-  \caption{A graphical representation of the Average Symmetric Surface Distance from \cite{reinkeUnderstandingMetricrelatedPitfalls2023,reinkeCommonLimitationsImage2023}.}
+  \caption[A graphical representation of the Average Symmetric Surface Distance]{A graphical representation of the Average Symmetric Surface Distance from \cite{reinkeUnderstandingMetricrelatedPitfalls2023,reinkeCommonLimitationsImage2023}.}
   \label{fig:ASSD}
 \end{figure}
 
@@ -64,7 +64,7 @@ Like the previous two, the Hausdorff distance requires sub-kernels for every sam
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.9\textwidth]{~/figures/raster/HausdorfDistance.png}
-  \caption{A graphical representation of the Hausdorff Distance, taken from \cite{reinkeCommonLimitationsImage2023,reinkeUnderstandingMetricrelatedPitfalls2023}.}
+  \caption[A graphical representation of the Hausdorff Distance]{A graphical representation of the Hausdorff Distance, taken from \cite{reinkeCommonLimitationsImage2023,reinkeUnderstandingMetricrelatedPitfalls2023}.}
   \label{fig:HD}
 \end{figure}
 
@@ -116,7 +116,7 @@ He observed that most other line segments were superfluous for shape recognition
   \centering
   \includegraphics[width=0.45\textwidth]{~/figures/raster/attneave-blob-points.png}
   \includegraphics[width=0.45\textwidth]{~/figures/raster/attneave-cat-contour.png}
-  \caption{Some representative examples of the experiments that Fred Attneave performed to establish the primacy of high curvature as salient in shape recreation and recognition, from \cite{attneaveInformationalAspectsVisual1954}.}
+  \caption[Some representative examples of the experiments that Fred Attneave performed to establish the primacy of high curvature as salient in shape recreation and recognition]{Some representative examples of the experiments that Fred Attneave performed to establish the primacy of high curvature as salient in shape recreation and recognition, from \cite{attneaveInformationalAspectsVisual1954}.}
   \label{fig:attneave}
 \end{figure}
 
