--- a/src/aim4-shape-sensitivity/ss_src/2_intro.tex
+++ b/src/aim4-shape-sensitivity/ss_src/2_intro.tex
@@ -16,7 +16,7 @@ In a manual registration setting \cite{muJointTrackOpenSourceEasily2007}, differ
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.4\textwidth]{~/figures/raster/BAD_IE_HUM.png}
-	\caption{A representative example of poor internal/external rotation of the humeral implant after automated model-image registration using JointTrack Machine Learning \cite{jensenJointTrackMachine2023}.}
+	\caption[A representative example of poor internal/external rotation of the humeral implant after automated model-image registration using JointTrack Machine Learning]{A representative example of poor internal/external rotation of the humeral implant after automated model-image registration using JointTrack Machine Learning \cite{jensenJointTrackMachine2023}.}
 	\label{fig:bad_ie_hum}
 \end{figure}
 
